--- a/Mosques.html
+++ b/Mosques.html
@@ -76,7 +76,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 لمدينة الجبيل</p>
+        <p data-translate="footer">&copy; 2025  دليل مدينة الجبيل الصناعية</p>
     </footer>
 
     <script src="script.js"></script>
