--- a/entertainment.html
+++ b/entertainment.html
@@ -132,7 +132,7 @@
            
 
     <footer>
-        <p>&copy; 2025  مدينة الجبيل</p>
+        <p data-translate="footer">&copy; 2025  دليل مدينة الجبيل الصناعية</p>
     </footer>
 
     <script src="script.js"></script>
