--- a/hotels.html
+++ b/hotels.html
@@ -65,7 +65,7 @@
                     <p data-translate="hotel-description-3"> منتجع فاخر على شاطئ البحر يتميز بحدائق خلابة وشاطئ خاص. يوفر غرفًا وأجنحة أنيقة بإطلالات على الخليج العربي.</p>
                     <p data-translate="hotel-location-3">  الموقع على خرائط جوجل </p>
                     <a href="https://maps.app.goo.gl/nvCLuttWja21M8GW6" target="_blank" data-translate="hotel-link-3"> فندق إنتركونتيننتال الجبيل</a>
-                    <a href="https://www.ihg.com/intercontinental/hotels/ae/ar/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qIta=99618783&icdv=99618783&glat=META&qSlH=DHAHC&qRms=1&qAdlt=2&qChld=0&qCiD=10&qCiMy=022025&qCoD=11&qCoMy=022025&qrtPt=699.00&setPMCookies=true&qSlRc=KAFS&qRtP=IGCOR&qSHBrC=IC&qDest=P.O.%20Box%2010167%2C%20AL%20JUBAIL%2C%20SA&partnerVerification=false&qSlRp=KAFSIGCOR&userCountryCode=SA&partnerTotalRateShown=928.80&userSelectedRatePlan=KAFSIGCOR&userDeviceType=desktop&userBookingWindow=0&adjustMonth=true&partnerClickType=hotel&hmGUID=d9136d49-e8e3-4ada-118e-0acfd392b036&partnerCurrencyCode=SAR&partnerAdSite=mapresults&partnerRateShown=699.00&gclid=Cj0KCQjwm7q-BhDRARIsACD6-fW7uk8EcYHYnVjk3pCYSeDXKCOdmQLSmMq5l5f820FDcPG1cyQGvRMaAiCJEALw_wcB&cm_mmc=hpa_paid_SA_desktop_DHAHC_mapresults_1_SAR_2025-03-10_selected_12260023336_6663532944_FALSE_KAFSIGCOR&partnerDateType=selected&partnerAdType=paid&srb_u=1"  data-translate="hotel-link-3">  للحجز والاستفسار  </a>
+                    <a href="https://www.ihg.com/intercontinental/hotels/ae/ar/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qIta=99618783&icdv=99618783&glat=META&qSlH=DHAHC&qRms=1&qAdlt=2&qChld=0&qCiD=10&qCiMy=022025&qCoD=11&qCoMy=022025&qrtPt=699.00&setPMCookies=true&qSlRc=KAFS&qRtP=IGCOR&qSHBrC=IC&qDest=P.O.%20Box%2010167%2C%20AL%20JUBAIL%2C%20SA&partnerVerification=false&qSlRp=KAFSIGCOR&userCountryCode=SA&partnerTotalRateShown=928.80&userSelectedRatePlan=KAFSIGCOR&userDeviceType=desktop&userBookingWindow=0&adjustMonth=true&partnerClickType=hotel&hmGUID=d9136d49-e8e3-4ada-118e-0acfd392b036&partnerCurrencyCode=SAR&partnerAdSite=mapresults&partnerRateShown=699.00&gclid=Cj0KCQjwm7q-BhDRARIsACD6-fW7uk8EcYHYnVjk3pCYSeDXKCOdmQLSmMq5l5f820FDcPG1cyQGvRMaAiCJEALw_wcB&cm_mmc=hpa_paid_SA_desktop_DHAHC_mapresults_1_SAR_2025-03-10_selected_12260023336_6663532944_FALSE_KAFSIGCOR&partnerDateType=selected&partnerAdType=paid&srb_u=1"  data-translate="hotel-more-3">  للحجز والاستفسار  </a>
                 </div>
                 
                 <div class="hotel">
@@ -124,7 +124,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 لمدينة الجبيل</p>
+        <p data-translate="footer">&copy; 2025  دليل مدينة الجبيل الصناعية</p>
     </footer>
 
     <script src="script.js"></script>
