--- a/eat.html
+++ b/eat.html
@@ -110,7 +110,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2025 لمدينة الجبيل</p>
+        <p data-translate="footer">&copy; 2025  دليل مدينة الجبيل الصناعية</p>
     </footer>
 
     <script src="script.js"></script>
