--- a/healthcare.html
+++ b/healthcare.html
@@ -32,6 +32,7 @@
             </ul>
         </nav>
         <section id="hotels" class="fade-in">
+            
             <h2 class="hotels-title" data-translate="healthcare-title">الصحة</h2>
             <div class="hotels">
                 <div class="hotel">
@@ -121,7 +122,7 @@
            
 
     <footer>
-        <p>&copy; 2025 لمدينة الجبيل</p>
+        <p data-translate="footer">&copy; 2025  دليل مدينة الجبيل الصناعية</p>
     </footer>
 
     <script src="script.js"></script>
